# Sports-predictor

./: .gitignore  .pre-commit-config.yaml  GITHUB_SETUP.md  LICENSE  Makefile  README.md  average_table_test.csv  complete_season_sim_1000.parquet  predictions_2025_26.csv  process_historical_data.py  pyproject.toml  season_sim_1000.parquet  season_simulation_2025_26.parquet  test_predictions.csv  test_system.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: epl.yaml  epl_simple.yaml  template.yaml
examples/: season_simulation_example.py
notebooks/: 01_exploratory_data_analysis.ipynb
src/spx/: __init__.py  cli.py  utils.py
src/spx/adapters/: __init__.py  base.py  web_scraper.py
src/spx/adapters/football/: __init__.py  epl.py
src/spx/core/: __init__.py  calibration.py  config.py  features.py  io.py  ratings.py  schema.py  simulate.py
tests/: conftest.py  test_adapters.py  test_ratings.py  test_schema.py
tests/data/: epl_2024_25.csv  sample_epl.csv  sample_fixtures.csv
